# django_site

./: README.md  docker-compose.yaml  env_example  main.py  pyproject.toml
quotes/: Dockerfile  requirements.txt
quotes/quoteapp/: admin.py  forms.py  models.py  urls.py  views.py
quotes/quoteapp/migrations/: 0001_initial.py  0002_rename_born_author_born_date_author_born_place.py  0003_alter_author_born_place.py  0004_rename_authors_quote_author.py  0005_remove_quote_author_quote_author.py
quotes/quoteapp/templates/quoteapp/: add_author.html  author.html  base.html  index.html  quote.html  quotes_by_tag.html  tag.html
quotes/quotes/: settings.py  urls.py
quotes/users/: forms.py  views.py
quotes/users/migrations/: 0001_initial.py
quotes/users/templates/users/: login.html  profile.html  signup.html
