[tool.poetry]
name = "django-site"
version = "0.1.0"
description = ""
authors = ["ivan1melnyk <melnyk.ivan20a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
psycopg2 = "^2.9.9"
pillow = "^10.2.0"
django-environ = "^0.11.2"
waitress = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
